# lehmer.c

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  auto-build  lehmer_proof_of_concept.py  proof_of_concept.py
docs/: Lehmer-Park-RNG-Analysis.md
docs/lehmer/: Lehmer-Park-RNG-Analysis.md  Lehmer-Proof-of-Concept.md  Modular-Arithmetic.md  Parallel-Arithmetic.md
examples/: CMakeLists.txt  algorithm.c  binder.c  concept.c  generator.c  impl.c  lehmer.c  lehmer.py  modulus.c  simple32.c  simple64.c  simple_exam.c  simple_impl.c  simple_test.c  validator.c
include/: lehmer.h  prime.h  test.h
lehmer/: cli.py  gamma.py  generator.py  primality.py  simple.py  test.py
src/: lehmer.c  prime.c  test.c
tests/: test.c  test.h  test_lehmer.c  test_lehmer_api.c  test_lehmer_generate.c  test_lehmer_period.c  test_prime.c
